[package]
name = "vault_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
futures = "0.3.31" # for our async / await blocks
tokio = { version = "1.42.0", features = ["full"] } # for our async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
